--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
+    "@apollo/client": "^3.6.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.1",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "@mui/x-data-grid": "^5.10.0",
+    "date-fns": "^2.28.0",
+    "graphql": "^16.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
