--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "admin-dashboard",
+  "name": "task-manager",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write .",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "@apollo/client": "^3.6.2",
@@ -35,6 +36,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
+    "cypress": "^10.4.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
