--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": ["react-app", "react-app/jest", "prettier"],
   "rules": {
     "no-undef": "off",
-    "no-unused-expressions": "off"
+    "no-unused-expressions": "off",
+    "@typescript-eslint/no-unused-expressions": "off"
   },
   "overrides": [
     {
