added github actions workflow

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "npm run test && npm start && npx cypress run",
     "format": "npx prettier --write .",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "@apollo/client": "^3.6.2",
