--- a/.github/workflows/client-tests.yml
+++ b/.github/workflows/client-tests.yml
@@ -19,4 +19,6 @@ jobs:
       - name: Run E2E tests
         uses: cypress-io/github-action@v4
         with:
+          build: npm run build
+          start: npm start
           browser: chrome
