--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "cypress": "^10.4.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "wait-on": "^6.0.1"
   },
   "browserslist": {
     "production": [
