--- a/.github/workflows/client-tests.yml
+++ b/.github/workflows/client-tests.yml
@@ -21,4 +21,5 @@ jobs:
         with:
           browser: chrome
           build: npm run build
-          start: npm start && wait-on http://localhost:3000
+          start: npm start
+          wait-on: 'http://localhost:3000'
