--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid": "^5.12.2",
     "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
+    "js-cookie": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
@@ -35,6 +36,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^16.11.26",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
