--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.31.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "victory": "^36.6.8",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
+    "@types/victory": "^35.0.0",
     "cypress": "^10.4.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.2",
