uploading user photo, missing testing and cleanup

--- a/cypress/fixtures/getTasks.json
+++ b/cypress/fixtures/getTasks.json
@@ -3,7 +3,7 @@
     "tasks": [
       {
         "id": "e2926154-0680-4464-b63b-aee542cf2885",
-        "taskName": "Task1",
+        "name": "Task1",
         "description": "",
         "user": {
           "id": "9b11baa2-250c-4dbd-9b2a-7ae2545dc125",
@@ -17,7 +17,7 @@
       },
       {
         "id": "03baed5f-2846-486a-bb17-2c629539f599",
-        "taskName": "Task2",
+        "name": "Task2",
         "description": "",
         "user": {
           "id": "9b11baa2-250c-4dbd-9b2a-7ae2545dc125",
@@ -31,7 +31,7 @@
       },
       {
         "id": "650ce8da-f6d8-4b83-a5a1-5310aa8f0c31",
-        "taskName": "Task4",
+        "name": "Task4",
         "description": "",
         "user": {
           "id": "9b11baa2-250c-4dbd-9b2a-7ae2545dc125",
@@ -45,7 +45,7 @@
       },
       {
         "id": "0df9a38b-c448-4117-8430-029334798da5",
-        "taskName": "Task4",
+        "name": "Task4",
         "description": "",
         "user": {
           "id": "ba06cd6b-36fe-46ac-8202-45e064587bbc",
@@ -59,7 +59,7 @@
       },
       {
         "id": "3f4d164c-5322-4228-a1e7-8665d19efc4c",
-        "taskName": "Task5",
+        "name": "Task5",
         "description": "",
         "user": {
           "id": "9b11baa2-250c-4dbd-9b2a-7ae2545dc125",
@@ -73,7 +73,7 @@
       },
       {
         "id": "f33c64e7-dac2-432a-9c34-d75e5ba4222b",
-        "taskName": "Task6",
+        "name": "Task6",
         "description": "",
         "user": {
           "id": "ba06cd6b-36fe-46ac-8202-45e064587bbc",
@@ -87,7 +87,7 @@
       },
       {
         "id": "ca13c86a-e1e2-406f-a726-ce9c8e7eed41",
-        "taskName": "Task7",
+        "name": "Task7",
         "description": "",
         "user": {
           "id": "9b11baa2-250c-4dbd-9b2a-7ae2545dc125",
@@ -101,7 +101,7 @@
       },
       {
         "id": "2a3315dd-cc57-4c7d-aeed-1cc6fdc705f6",
-        "taskName": "Task8",
+        "name": "Task8",
         "description": "",
         "user": {
           "id": "ba06cd6b-36fe-46ac-8202-45e064587bbc",
@@ -115,7 +115,7 @@
       },
       {
         "id": "3710e28a-3cad-4c87-8a40-e82f6db7e16b",
-        "taskName": "Task9",
+        "name": "Task9",
         "description": "",
         "user": {
           "id": "9b11baa2-250c-4dbd-9b2a-7ae2545dc125",
@@ -129,7 +129,7 @@
       },
       {
         "id": "7d7022ad-3a43-4b0a-b802-87540ed09559",
-        "taskName": "Task10",
+        "name": "Task10",
         "description": "",
         "user": {
           "id": "ba06cd6b-36fe-46ac-8202-45e064587bbc",
@@ -143,7 +143,7 @@
       },
       {
         "id": "18c6e8d7-231f-47c3-a713-45542a218ef6",
-        "taskName": "Task11",
+        "name": "Task11",
         "description": "",
         "user": {
           "id": "9b11baa2-250c-4dbd-9b2a-7ae2545dc125",
