--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "@mui/x-data-grid": "^5.12.2",
+    "apollo-upload-client": "^17.0.0",
     "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
+    "graphql-upload": "^16.0.2",
     "js-cookie": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -36,6 +38,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/apollo-upload-client": "^17.0.2",
+    "@types/graphql-upload": "^16.0.0",
     "@types/jest": "^27.4.1",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^16.11.26",
